--- a/PERFUMERIA/css/style.css
+++ b/PERFUMERIA/css/style.css
@@ -20,7 +20,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #a2dbff;
+  --primary: #32D1FB;
   --secondary: #66d6ff;
   --success: #28a745;
   --info: #17a2b8;
@@ -155,12 +155,12 @@ sup {
 }
 
 a {
-  color: #a2dbff;
+  color: #32D1FB;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #56bdff;
+  color: #04afdc;
   text-decoration: underline;
 }
 
@@ -1564,21 +1564,21 @@ pre code {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #e5f5ff;
+  background-color: #c6f2fe;
 }
 .table-primary th,
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-  border-color: #cfecff;
+  border-color: #94e7fd;
 }
 
 .table-hover .table-primary:hover {
-  background-color: #ccebff;
+  background-color: #adecfe;
 }
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #ccebff;
+  background-color: #adecfe;
 }
 
 .table-secondary,
@@ -1851,9 +1851,9 @@ pre code {
 .form-control:focus {
   color: #495057;
   background-color: #fff;
-  border-color: white;
+  border-color: #afedfd;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(162, 219, 255, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(50, 209, 251, 0.25);
 }
 .form-control::-moz-placeholder {
   color: #6c757d;
@@ -2275,7 +2275,7 @@ textarea.form-control {
 }
 .btn:focus, .btn.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(162, 219, 255, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(50, 209, 251, 0.25);
 }
 .btn.disabled, .btn:disabled {
   opacity: 0.65;
@@ -2290,32 +2290,32 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #212529;
-  background-color: #a2dbff;
-  border-color: #a2dbff;
+  background-color: #32D1FB;
+  border-color: #32D1FB;
 }
 .btn-primary:hover {
   color: #212529;
-  background-color: #7cccff;
-  border-color: #6fc7ff;
+  background-color: #0cc9fa;
+  border-color: #05c3f5;
 }
 .btn-primary:focus, .btn-primary.focus {
   color: #212529;
-  background-color: #7cccff;
-  border-color: #6fc7ff;
-  box-shadow: 0 0 0 0.2rem rgba(143, 192, 223, 0.5);
+  background-color: #0cc9fa;
+  border-color: #05c3f5;
+  box-shadow: 0 0 0 0.2rem rgba(47, 183, 220, 0.5);
 }
 .btn-primary.disabled, .btn-primary:disabled {
   color: #212529;
-  background-color: #a2dbff;
-  border-color: #a2dbff;
+  background-color: #32D1FB;
+  border-color: #32D1FB;
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
-  color: #212529;
-  background-color: #6fc7ff;
-  border-color: #62c2ff;
+  color: #fff;
+  background-color: #05c3f5;
+  border-color: #05b9e9;
 }
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(143, 192, 223, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(47, 183, 220, 0.5);
 }
 
 .btn-secondary {
@@ -2529,28 +2529,28 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #a2dbff;
-  border-color: #a2dbff;
+  color: #32D1FB;
+  border-color: #32D1FB;
 }
 .btn-outline-primary:hover {
   color: #212529;
-  background-color: #a2dbff;
-  border-color: #a2dbff;
+  background-color: #32D1FB;
+  border-color: #32D1FB;
 }
 .btn-outline-primary:focus, .btn-outline-primary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(162, 219, 255, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(50, 209, 251, 0.5);
 }
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #a2dbff;
+  color: #32D1FB;
   background-color: transparent;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
   color: #212529;
-  background-color: #a2dbff;
-  border-color: #a2dbff;
+  background-color: #32D1FB;
+  border-color: #32D1FB;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(162, 219, 255, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(50, 209, 251, 0.5);
 }
 
 .btn-outline-secondary {
@@ -2730,11 +2730,11 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #a2dbff;
+  color: #32D1FB;
   text-decoration: none;
 }
 .btn-link:hover {
-  color: #56bdff;
+  color: #04afdc;
   text-decoration: underline;
 }
 .btn-link:focus, .btn-link.focus {
@@ -3003,7 +3003,7 @@ input[type=button].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #a2dbff;
+  background-color: #32D1FB;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #6c757d;
@@ -3332,19 +3332,19 @@ input[type=button].btn-block {
 }
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #a2dbff;
-  background-color: #a2dbff;
+  border-color: #32D1FB;
+  background-color: #32D1FB;
 }
 .custom-control-input:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 0.2rem rgba(162, 219, 255, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(50, 209, 251, 0.25);
 }
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: white;
+  border-color: #afedfd;
 }
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
   color: #fff;
-  background-color: white;
-  border-color: white;
+  background-color: #e1f8fe;
+  border-color: #e1f8fe;
 }
 .custom-control-input[disabled] ~ .custom-control-label, .custom-control-input:disabled ~ .custom-control-label {
   color: #6c757d;
@@ -3388,17 +3388,17 @@ input[type=button].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #a2dbff;
-  background-color: #a2dbff;
+  border-color: #32D1FB;
+  background-color: #32D1FB;
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e");
 }
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(162, 219, 255, 0.5);
+  background-color: rgba(50, 209, 251, 0.5);
 }
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(162, 219, 255, 0.5);
+  background-color: rgba(50, 209, 251, 0.5);
 }
 
 .custom-radio .custom-control-label::before {
@@ -3408,7 +3408,7 @@ input[type=button].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
 }
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(162, 219, 255, 0.5);
+  background-color: rgba(50, 209, 251, 0.5);
 }
 
 .custom-switch {
@@ -3439,7 +3439,7 @@ input[type=button].btn-block {
   transform: translateX(0.75rem);
 }
 .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(162, 219, 255, 0.5);
+  background-color: rgba(50, 209, 251, 0.5);
 }
 
 .custom-select {
@@ -3460,9 +3460,9 @@ input[type=button].btn-block {
           appearance: none;
 }
 .custom-select:focus {
-  border-color: white;
+  border-color: #afedfd;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(162, 219, 255, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(50, 209, 251, 0.25);
 }
 .custom-select:focus::-ms-value {
   color: #495057;
@@ -3518,8 +3518,8 @@ input[type=button].btn-block {
   opacity: 0;
 }
 .custom-file-input:focus ~ .custom-file-label {
-  border-color: white;
-  box-shadow: 0 0 0 0.2rem rgba(162, 219, 255, 0.25);
+  border-color: #afedfd;
+  box-shadow: 0 0 0 0.2rem rgba(50, 209, 251, 0.25);
 }
 .custom-file-input[disabled] ~ .custom-file-label, .custom-file-input:disabled ~ .custom-file-label {
   background-color: #e9ecef;
@@ -3576,13 +3576,13 @@ input[type=button].btn-block {
   outline: none;
 }
 .custom-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #F3F6FF, 0 0 0 0.2rem rgba(162, 219, 255, 0.25);
+  box-shadow: 0 0 0 1px #F3F6FF, 0 0 0 0.2rem rgba(50, 209, 251, 0.25);
 }
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #F3F6FF, 0 0 0 0.2rem rgba(162, 219, 255, 0.25);
+  box-shadow: 0 0 0 1px #F3F6FF, 0 0 0 0.2rem rgba(50, 209, 251, 0.25);
 }
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #F3F6FF, 0 0 0 0.2rem rgba(162, 219, 255, 0.25);
+  box-shadow: 0 0 0 1px #F3F6FF, 0 0 0 0.2rem rgba(50, 209, 251, 0.25);
 }
 .custom-range::-moz-focus-outer {
   border: 0;
@@ -3591,7 +3591,7 @@ input[type=button].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #a2dbff;
+  background-color: #32D1FB;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3606,7 +3606,7 @@ input[type=button].btn-block {
   }
 }
 .custom-range::-webkit-slider-thumb:active {
-  background-color: white;
+  background-color: #e1f8fe;
 }
 .custom-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -3620,7 +3620,7 @@ input[type=button].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #a2dbff;
+  background-color: #32D1FB;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3635,7 +3635,7 @@ input[type=button].btn-block {
   }
 }
 .custom-range::-moz-range-thumb:active {
-  background-color: white;
+  background-color: #e1f8fe;
 }
 .custom-range::-moz-range-track {
   width: 100%;
@@ -3652,7 +3652,7 @@ input[type=button].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #a2dbff;
+  background-color: #32D1FB;
   border: 0;
   border-radius: 1rem;
   -ms-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3666,7 +3666,7 @@ input[type=button].btn-block {
   }
 }
 .custom-range::-ms-thumb:active {
-  background-color: white;
+  background-color: #e1f8fe;
 }
 .custom-range::-ms-track {
   width: 100%;
@@ -3773,7 +3773,7 @@ input[type=button].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #a2dbff;
+  background-color: #32D1FB;
 }
 
 .nav-fill > .nav-link,
@@ -4424,13 +4424,13 @@ input[type=button].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #a2dbff;
+  color: #32D1FB;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
 .page-link:hover {
   z-index: 2;
-  color: #56bdff;
+  color: #04afdc;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -4438,7 +4438,7 @@ input[type=button].btn-block {
 .page-link:focus {
   z-index: 3;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(162, 219, 255, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(50, 209, 251, 0.25);
 }
 
 .page-item:first-child .page-link {
@@ -4453,8 +4453,8 @@ input[type=button].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #a2dbff;
-  border-color: #a2dbff;
+  background-color: #32D1FB;
+  border-color: #32D1FB;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -4530,15 +4530,15 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #212529;
-  background-color: #a2dbff;
+  background-color: #32D1FB;
 }
 a.badge-primary:hover, a.badge-primary:focus {
   color: #212529;
-  background-color: #6fc7ff;
+  background-color: #05c3f5;
 }
 a.badge-primary:focus, a.badge-primary.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(162, 219, 255, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(50, 209, 251, 0.5);
 }
 
 .badge-secondary {
@@ -4679,15 +4679,15 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-primary {
-  color: #547285;
-  background-color: #ecf8ff;
-  border-color: #e5f5ff;
+  color: #1a6d83;
+  background-color: #d6f6fe;
+  border-color: #c6f2fe;
 }
 .alert-primary hr {
-  border-top-color: #ccebff;
+  border-top-color: #adecfe;
 }
 .alert-primary .alert-link {
-  color: #405766;
+  color: #124a58;
 }
 
 .alert-secondary {
@@ -4800,7 +4800,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #a2dbff;
+  background-color: #32D1FB;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -4879,8 +4879,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #a2dbff;
-  border-color: #a2dbff;
+  background-color: #32D1FB;
+  border-color: #32D1FB;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -5020,17 +5020,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-primary {
-  color: #547285;
-  background-color: #e5f5ff;
+  color: #1a6d83;
+  background-color: #c6f2fe;
 }
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #547285;
-  background-color: #ccebff;
+  color: #1a6d83;
+  background-color: #adecfe;
 }
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #547285;
-  border-color: #547285;
+  background-color: #1a6d83;
+  border-color: #1a6d83;
 }
 
 .list-group-item-secondary {
@@ -5893,13 +5893,13 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #a2dbff !important;
+  background-color: #32D1FB !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #6fc7ff !important;
+  background-color: #05c3f5 !important;
 }
 
 .bg-secondary {
@@ -6021,7 +6021,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #a2dbff !important;
+  border-color: #32D1FB !important;
 }
 
 .border-secondary {
@@ -9046,11 +9046,11 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #a2dbff !important;
+  color: #32D1FB !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #56bdff !important;
+  color: #04afdc !important;
 }
 
 .text-secondary {
@@ -9290,7 +9290,12 @@ h6,
   height: 50%;
   top: 0;
   left: 0;
-  background: #a2dbff;
+  background: #32D1FB;
+}
+
+.logo {
+  width: 200px;
+  height: 200px;
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -9303,7 +9308,7 @@ h6,
 
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link.active {
-  color: #a2dbff;
+  color: #32D1FB;
 }
 
 @media (max-width: 991.98px) {
@@ -9341,7 +9346,7 @@ h6,
   left: 0;
   width: 100px;
   height: 5px;
-  background: #a2dbff;
+  background: #32D1FB;
 }
 
 .section-title::after {
@@ -9411,7 +9416,7 @@ h6,
   width: 0;
   height: 0;
   left: -5px;
-  border-left: 25px solid #a2dbff;
+  border-left: 25px solid #32D1FB;
   border-top: 15px solid transparent;
   border-bottom: 15px solid transparent;
 }
@@ -9470,7 +9475,7 @@ h6,
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #a2dbff;
+  color: #32D1FB;
   background: #96f3ff;
   border-radius: 60px;
   font-size: 30px;
@@ -9494,7 +9499,7 @@ h6,
   right: 0;
   bottom: -15px;
   left: 0;
-  background: #a2dbff;
+  background: #32D1FB;
   border-radius: 150px;
   z-index: -1;
 }
@@ -9521,7 +9526,7 @@ h6,
 }
 
 .product-item:hover .btn {
-  background: #a2dbff !important;
+  background: #32D1FB !important;
 }
 
 .portfolio-item::after {
@@ -9566,7 +9571,7 @@ h6,
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 15px solid #a2dbff;
+  border: 15px solid #32D1FB;
   border-radius: 200px;
   overflow: hidden;
   z-index: 1;
@@ -9579,7 +9584,7 @@ h6,
   right: 15px;
   bottom: 15px;
   left: 15px;
-  border: 2px solid #a2dbff;
+  border: 2px solid #32D1FB;
   border-radius: 200px;
   transition: 0.5s;
   z-index: 2;
@@ -9632,7 +9637,7 @@ h6,
   width: 15px;
   height: 15px;
   border-radius: 15px;
-  background: #a2dbff;
+  background: #32D1FB;
 }
 
 .testimonial-carousel .owl-dot::after {
@@ -9642,7 +9647,7 @@ h6,
   right: -5px;
   bottom: -5px;
   left: -5px;
-  border: 2px solid #a2dbff;
+  border: 2px solid #32D1FB;
   border-radius: 20px;
 }
 
